<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/nav_user"
        android:title="@string/menu_config"
        android:icon="@android:drawable/ic_menu_manage"
        tools:layout="@layout/fragment_user" />

    <group>
        <item
            android:id="@+id/nav_test"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_compatibility"
            tools:layout="@layout/fragment_test" />

        <item
            android:id="@+id/nav_meet"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_meet"
            tools:layout="@layout/fragment_meet_me" />
    </group>


</menu>